# fenix-university-registry

./: Cargo.toml  README.md
src/: lib.rs
tests/: test_basics.rs
