[package]
name = "fenix-university-registry"
description = "cargo-near-new-project-description"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/<xxx>/<xxx>"

[lib]
crate-type = ["cdylib", "rlib"]

container_build_command = ["cargo", "near", "build"]

[dependencies]
near-sdk = { version = "5.4", features = ["legacy", "unit-testing"] }
uint = { version = "0.9.3", default-features = false }
borsh = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8" 

[dev-dependencies]
near-sdk = { version = "5.5", features = ["unit-testing"] }
near-workspaces = { version = "0.14.1", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
